# pvr.iptvsimple

./: .gitignore  CMakeLists.txt  FindCurl.cmake  FindRapidJSON.cmake  README.md  mktar.sh
depends/common/curl/: curl.txt  flags.txt
depends/common/rapidjson/: flags.txt  rapidjson.txt
depends/common/zlib/: zlib.txt
pvr.iptvsimple/: addon.xml.in  changelog.txt
pvr.iptvsimple/resources/: settings.xml
pvr.iptvsimple/resources/language/resource.language.en_gb/: strings.po
src/: CurlHelper.cpp  CurlHelper.h  PVRIptvData.cpp  PVRIptvData.h  client.cpp  client.h
src/iptvsimple/: CatchupController.h  ChannelGroups.h  Channels.h  Epg.h  PlaylistLoader.h  Settings.h
src/iptvsimple/data/: Channel.h  ChannelEpg.h  ChannelGroup.h  EpgEntry.h
src/iptvsimple/utilities/: FileUtils.cpp  StreamUtils.h
